# advent-of-code-2022

./: .gitignore  pyproject.toml
day01/: solution.py
day01/rust01/src/: main.rs
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py  tree.txt
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: search.py  solution.py
day13/: solution.py
day14/: output.txt  solution.py
day15/: solution.py
day16/: solution.py
